# State2Vault-controller

./: Cargo.toml  LICENSE  README.md  kind-config.yml  setup.sh  todo
controller/: Cargo.toml
controller/src/: crds.rs  main.rs
mock_passwordstate_api/: Cargo.toml  README.md
mock_passwordstate_api/src/: main.rs
password_state/: Cargo.toml
