[package]
name = "controller"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
vaultrs = { workspace = true }
